# Course_Scheduling_System

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Dockerfile.web  LICENSE  README.md  THIRD-PARTY-NOTICES.md  docker-compose.dev.yml  docker-compose.limits.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_and_roles.py  0002_semester_period.py  0003_basedata.py  0004_teacher_id_last4.py  0005_wizard_state.py  0006_class_period_table.py  0007_teacher_account_contact.py  0008_assignments.py  0009_timetables.py  0010_audit_logs.py  0011_schedule_entry_room.py  0012_soft_constraints.py  0013_leaves.py  0014_substitutions.py  0015_app_settings.py  0016_timetable_unscheduled.py  0017_class_name_unique.py
backend/app/: main.py
backend/app/api/: assignments.py  audit.py  auth.py  backups.py  basedata.py  exports.py  health.py  imports.py  leaves.py  notifications.py  semesters.py  settings.py  solver.py  substitution_log.py  substitution_stats.py  substitutions.py  timetables.py  wizard.py
backend/app/core/: auth.py  clock.py  config.py  db.py  security.py  session_epoch.py  validators.py
backend/app/data/: school_templates.json
backend/app/models/: __init__.py  app_setting.py  assignment.py  audit.py  basedata.py  constraint.py  leave.py  notification.py  period.py  semester.py  substitution.py  timetable.py  user.py  wizard.py
backend/app/schemas/: assignment.py  auth.py  backup.py  basedata.py  leave.py  notification.py  semester.py  solver.py  substitution.py  substitution_log.py  substitution_stats.py  timetable.py  wizard.py
backend/app/scripts/: __init__.py  seed_e2e.py
backend/app/services/: assignments.py  availability.py  backup.py  conflict_checker.py  email.py  importer.py  leaves.py  notifications.py  pdf.py  period_tables.py  semester_copy.py  settings.py  solver_data.py  substitution_log.py  substitution_recommender.py  substitution_stats.py  substitutions.py  teachers.py  templates.py  timetable_export.py  timetable_publish.py  users.py
backend/app/solver/: __init__.py  conflict_explainer.py  model_builder.py  preflight.py  problem.py  report.py  validator.py
backend/app/workers/: backup_job.py  email_job.py  export_job.py  progress.py  queue.py  scheduler.py  solve_job.py  worker.py
backend/tests/: conftest.py  dates.py  test_assignments.py  test_auth.py  test_backups.py  test_basedata.py  test_config_hardening.py  test_dates_helper.py  test_exports.py  test_fixtures.py  test_full_flow.py  test_health.py  test_import.py  test_leaves.py  test_m4_hardening.py  test_m5_hardening.py  test_m6_hardening.py  test_mixed_track.py  test_notifications.py  test_perf_scale.py  test_publish.py  test_queue_split.py  test_scale_fixture.py  test_semester_copy.py  test_semesters.py  test_substitution_log.py  test_substitution_stats.py  test_substitutions.py  test_teacher_account.py  test_timetables.py  test_wizard.py
backend/tests/fixtures/: __init__.py  _common.py  elementary.py  (+3 more)
(+119 files in other folders)
