[project]
name = "scheduling-backend"
version = "0.1.0"
description = "排課與調代課系統 — 後端 API 與排課引擎"
requires-python = ">=3.12"
# 核心相依一律釘主版號上限。理由是踩過:redis 未設上限,某次重建裝到 redis-py 8,
# 阻塞式 XREAD 的行為變了,匯出/備份在新環境一律逾時失敗(v1.1 修)。
# 映像是每次發行重新建置的,不釘上限就等於「哪天上游發大版,使用者的部署自己壞掉」。
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy>=2.0.36,<3",
    "alembic>=1.14,<2",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "redis>=5.2,<9",
    "rq>=2.0,<3",
    "python-multipart>=0.0.18",
    "bcrypt>=4.2,<6",
    "itsdangerous>=2.2,<3",
    "openpyxl>=3.1,<4",
    # 排課引擎(M3-2)。wheel 約 29MB,amd64/arm64 皆有 manylinux wheel。
    "ortools>=9.14,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]
# 匯出(M5-1 起):PDF 產生。系統依賴(Pango 等)與中文字型只裝在 worker 映像;
# api 映像維持精簡,匯出一律走背景任務(worker)。見 Dockerfile 的 worker 階段。
export = [
    "weasyprint>=63",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的依賴注入慣例:在參數預設值呼叫 Depends/require_roles 屬正常用法
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Security",
    "fastapi.File",
    "app.core.auth.require_roles",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "perf: 效能量測測試(規模資料下的時間門檻)",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
